 + New scenario: Teamwork 2
 + New scenario: Big Armory
 + New training: Basic Flying Saucer Training
 + Rope-Knocking Challenge was improved (now awards score based on kills and time; taunts for knocking out hedgehogs)
 + Rewrote some help texts in basic rope training
 + Graphical effect (black bars) while in cut scenes
 + Change description and icon for baseball bat in Knockball mission map
 * TrophyRace: Fix hedgehogs not being eliminated anymore after one hog skipped or ran out of time
 * Portal Mind Challenge was cleaned up and reworked (especially less awful wording)
 * Fixed Target Practice missions getting stuck when a target dropped into water
 * Fixed mistakes and bad wording of strings in several missions, scripts and campaigns
 * Climb Home: Fix game getting stuck when a player reached home in multiplayer
 * Climb Home: Fix Lua error messages and broken stats screen
 * Sniper rifle target practice: Fix targets spawning twice in dynamite scenes
 * Sniper rifle target practice: Fix auto-camera generally behaving weird

Frontend:
 + Campaign screen shows which campaigns and missions you've completed so far
 + Training screen now has 3 mission categories: Training (tutorials), Challenge (get a high score), Scenario (complete a task)
 + Replaced the Fort Mode game modifier by adding "Forts" to the map type selection. This makes the mode easier selectable/discoverable. Also the slider can be used to adjust the distance between forts.
 + Menu screens got few new icons and other tweaks, e.g. larger dropdown lists for easier access
 + Additional button for just randomizing theme that will not change your selected map
 + Randomizing map/theme in online-mode will not include DLC-content
 + New teams start with a random grave and fort
 + Hedgewars creates 4 human teams and 2 computer teams on its first launch
 + Allow to randomize hog names, hats, team name, flag, grave, voice and fort separately